# CarPlate

./: CMakeLists.txt  CPlateLocate.cpp  CPlateLocate.h  MyTest.cpp  MyTest.h  README.md  features.h  io.h  main.cpp  svm_train.cpp
CarVisual/: CMakeLists.txt  build.sh  main.cpp  test.cpp  test.h
CarVisual/include/easypr/: api.hpp
